Attach Menu: Fix z-index position with Scroll Down Button (#1303)

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -176,11 +176,11 @@ $color-user-8: #faa774;
   --z-animation-fade: 50;
   --z-menu-bubble: 21;
   --z-menu-backdrop: 20;
-  --z-message-highlighted: 13;
-  --z-message-context-menu: 12;
-  --z-mobile-search: 11;
-  --z-middle-header: 10;
-  --z-middle-footer: 10;
+  --z-message-highlighted: 14;
+  --z-message-context-menu: 13;
+  --z-mobile-search: 12;
+  --z-middle-header: 11;
+  --z-middle-footer: 11;
   --z-country-code-input-group: 10;
   --z-message-select-control: 9;
   --z-message-select-area: 8;
